{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 485,
  "lineage": "30a10ee2-b4df-3f81-6637-72cbe41919f4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eipNAT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0dd5878c81328e02c",
            "domain": "vpc",
            "id": "eipalloc-052a692a241218a76",
            "network_interface": "eni-0f44f77d42169afbd",
            "private_dns": "ip-10-0-1-204.ec2.internal",
            "private_ip": "10.0.1.204",
            "public_dns": "ec2-52-20-216-23.compute-1.amazonaws.com",
            "public_ip": "52.20.216.23",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dbInstance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:532323627252:instance/i-06b4904806855d0f5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-06b4904806855d0f5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dbKey",
            "monitoring": false,
            "primary_network_interface_id": "eni-07cd709487c10684f",
            "private_dns": "ip-10-0-3-156.ec2.internal",
            "private_ip": "10.0.3.156",
            "public_dns": "ec2-54-90-226-10.compute-1.amazonaws.com",
            "public_ip": "54.90.226.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03f1cd4d15a3ffe7c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0e08865611ff8bb87"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b47aee75afc414d9",
            "tags": {
              "Name": "dbInstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e08865611ff8bb87"
            ]
          },
          "depends_on": [
            "aws_key_pair.dbKey",
            "aws_security_group.dbSG",
            "aws_subnet.publicSubnets[\"10.0.3.0/24\"]"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webApp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:532323627252:instance/i-0ae604f5fccf49a84",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ae604f5fccf49a84",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webAppKey",
            "monitoring": false,
            "primary_network_interface_id": "eni-09727c8e29f64fc5d",
            "private_dns": "ip-10-0-1-245.ec2.internal",
            "private_ip": "10.0.1.245",
            "public_dns": "ec2-3-87-210-98.compute-1.amazonaws.com",
            "public_ip": "3.87.210.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-018ca2a778b0a42f5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f3a8f03b073bdaac"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1be3875639593df",
            "tags": {
              "Name": "webApp"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f3a8f03b073bdaac"
            ]
          },
          "depends_on": [
            "aws_key_pair.webKey",
            "aws_security_group.webSG",
            "aws_subnet.publicSubnets[\"10.0.1.0/24\"]"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mainGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ffaa9ec490211a97",
            "owner_id": "532323627252",
            "tags": {
              "Name": "mainGateway"
            },
            "vpc_id": "vpc-0712af2959b8cc952"
          },
          "depends_on": [
            "aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052a692a241218a76",
            "id": "nat-02613034165ee543b",
            "network_interface_id": "eni-0f44f77d42169afbd",
            "private_ip": "10.0.1.204",
            "public_ip": "52.20.216.23",
            "subnet_id": "subnet-0e1be3875639593df",
            "tags": {
              "Name": "natGateWay"
            }
          },
          "depends_on": [
            "aws_eip.eipNAT",
            "aws_subnet.publicSubnets[\"10.0.1.0/24\"]"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "privateRoute",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06ee7c3c868fecc991080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-02613034165ee543b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06ee7c3c868fecc99",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.natGW",
            "aws_route_table.privateRoute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "publicRoute",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ffaa9ec490211a97",
            "id": "r-rtb-01eda9cf4bcfdc34b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01eda9cf4bcfdc34b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.mainGW",
            "aws_route_table.publicRoute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRoute",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06ee7c3c868fecc99",
            "owner_id": "532323627252",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-02613034165ee543b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "privateRouteTable"
            },
            "vpc_id": "vpc-0712af2959b8cc952"
          },
          "depends_on": [
            "aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRoute",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01eda9cf4bcfdc34b",
            "owner_id": "532323627252",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ffaa9ec490211a97",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRouteTable"
            },
            "vpc_id": "vpc-0712af2959b8cc952"
          },
          "depends_on": [
            "aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateAssociation",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd9fc303d5319b15",
            "route_table_id": "rtb-06ee7c3c868fecc99",
            "subnet_id": "subnet-0e5ba45e20372bd6f"
          },
          "depends_on": [
            "aws_route_table.privateRoute",
            "aws_subnet.privateSubnets"
          ]
        },
        {
          "index_key": "10.0.4.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a59586a3a9a012b3",
            "route_table_id": "rtb-06ee7c3c868fecc99",
            "subnet_id": "subnet-0060dbdf040b2d278"
          },
          "depends_on": [
            "aws_route_table.privateRoute",
            "aws_subnet.privateSubnets"
          ]
        },
        {
          "index_key": "10.0.6.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b51334edef9fd7c1",
            "route_table_id": "rtb-06ee7c3c868fecc99",
            "subnet_id": "subnet-025298b404f2b27cd"
          },
          "depends_on": [
            "aws_route_table.privateRoute",
            "aws_subnet.privateSubnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicAssociation",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056064bd50aed1d44",
            "route_table_id": "rtb-01eda9cf4bcfdc34b",
            "subnet_id": "subnet-0e1be3875639593df"
          },
          "depends_on": [
            "aws_route_table.publicRoute",
            "aws_subnet.publicSubnets"
          ]
        },
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064d9f1ae78c574bd",
            "route_table_id": "rtb-01eda9cf4bcfdc34b",
            "subnet_id": "subnet-0b47aee75afc414d9"
          },
          "depends_on": [
            "aws_route_table.publicRoute",
            "aws_subnet.publicSubnets"
          ]
        },
        {
          "index_key": "10.0.5.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee473814b2a59d3f",
            "route_table_id": "rtb-01eda9cf4bcfdc34b",
            "subnet_id": "subnet-0adaaabfa7475e43b"
          },
          "depends_on": [
            "aws_route_table.publicRoute",
            "aws_subnet.publicSubnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dbSG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:532323627252:security-group/sg-0e08865611ff8bb87",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e08865611ff8bb87",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20191208193839570300000002",
            "name_prefix": null,
            "owner_id": "532323627252",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dbSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0712af2959b8cc952"
          },
          "depends_on": [
            "aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webSG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:532323627252:security-group/sg-0f3a8f03b073bdaac",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3a8f03b073bdaac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20191208193839566800000001",
            "name_prefix": null,
            "owner_id": "532323627252",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0712af2959b8cc952"
          },
          "depends_on": [
            "aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateSubnets",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:532323627252:subnet/subnet-0e5ba45e20372bd6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0e5ba45e20372bd6f",
            "map_public_ip_on_launch": false,
            "owner_id": "532323627252",
            "tags": {
              "Name": "PrivateSubnet-a"
            },
            "vpc_id": "vpc-0712af2959b8cc952"
          },
          "depends_on": [
            "aws_vpc.mainVPC"
          ]
        },
        {
          "index_key": "10.0.4.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:532323627252:subnet/subnet-0060dbdf040b2d278",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0060dbdf040b2d278",
            "map_public_ip_on_launch": false,
            "owner_id": "532323627252",
            "tags": {
              "Name": "PrivateSubnet-b"
            },
            "vpc_id": "vpc-0712af2959b8cc952"
          },
          "depends_on": [
            "aws_vpc.mainVPC"
          ]
        },
        {
          "index_key": "10.0.6.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:532323627252:subnet/subnet-025298b404f2b27cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-025298b404f2b27cd",
            "map_public_ip_on_launch": false,
            "owner_id": "532323627252",
            "tags": {
              "Name": "PrivateSubnet-c"
            },
            "vpc_id": "vpc-0712af2959b8cc952"
          },
          "depends_on": [
            "aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubnets",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:532323627252:subnet/subnet-0e1be3875639593df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e1be3875639593df",
            "map_public_ip_on_launch": true,
            "owner_id": "532323627252",
            "tags": {
              "Name": "publicSubnet-a"
            },
            "vpc_id": "vpc-0712af2959b8cc952"
          },
          "depends_on": [
            "aws_vpc.mainVPC"
          ]
        },
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:532323627252:subnet/subnet-0b47aee75afc414d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0b47aee75afc414d9",
            "map_public_ip_on_launch": true,
            "owner_id": "532323627252",
            "tags": {
              "Name": "publicSubnet-b"
            },
            "vpc_id": "vpc-0712af2959b8cc952"
          },
          "depends_on": [
            "aws_vpc.mainVPC"
          ]
        },
        {
          "index_key": "10.0.5.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:532323627252:subnet/subnet-0adaaabfa7475e43b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0adaaabfa7475e43b",
            "map_public_ip_on_launch": true,
            "owner_id": "532323627252",
            "tags": {
              "Name": "publicSubnet-c"
            },
            "vpc_id": "vpc-0712af2959b8cc952"
          },
          "depends_on": [
            "aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainVPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:532323627252:vpc/vpc-0712af2959b8cc952",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0741a769eb5c6f196",
            "default_route_table_id": "rtb-099eeb8337e20f68d",
            "default_security_group_id": "sg-00558ff5a3dc9e00d",
            "dhcp_options_id": "dopt-c24fbcb8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0712af2959b8cc952",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-099eeb8337e20f68d",
            "owner_id": "532323627252",
            "tags": {
              "Name": "MainVPC"
            }
          }
        }
      ]
    }
  ]
}